--- a/index.html
+++ b/index.html
@@ -3,66 +3,70 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=360, initial-scale=1">
-	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>User-Friendly Product Page</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
 	<link rel="stylesheet" href="assets/main.css">
 </head>
 
 <body>
-  <h1><a href="otherPage.html">Other Page</a></h1>
+	<header>
+		<h1><a href="otherPage.html">Go to Other Page</a></h1>
+	</header>
+
 	<main class="main-container">
 
-		<section class="section">
-			<h2 class="text-center">Products</h2>
+		<section class="section products-section">
+			<h2 class="text-center">Explore Our Products</h2>
 			<div class="products">
-				<!--
-					https://www.iconfinder.com/iconsets/beverage
-					Creative Commons (Attribution 3.0 Unported)
-					https://creativemarket.com/eucalyp
-				-->
 				<div class="product">
 					<img class="product__image" src="img/products/beer.svg" alt="Beer">
 					<h2 class="product__name">Beer</h2>
-					<h3 class="product__price">6.00</h3>
+					<p class="product__price">$6.00</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/products/energy-drink.svg" alt="Energy Drink">
 					<h2 class="product__name">Energy Drink</h2>
-					<h3 class="product__price">5.00</h3>
+					<p class="product__price">$5.00</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/products/juice.svg" alt="Juice">
 					<h2 class="product__name">Juice</h2>
-					<h3 class="product__price">4.00</h3>
+					<p class="product__price">$4.00</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/products/milk.svg" alt="Milk">
 					<h2 class="product__name">Milk</h2>
-					<h3 class="product__price">2.50</h3>
+					<p class="product__price">$2.50</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/products/mineral-water.svg" alt="Mineral Water">
 					<h2 class="product__name">Mineral Water</h2>
-					<h3 class="product__price">1.00</h3>
+					<p class="product__price">$1.00</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 				<div class="product">
 					<img class="product__image" src="img/products/smoothie.svg" alt="Smoothie">
 					<h2 class="product__name">Smoothie</h2>
-					<h3 class="product__price">6.00</h3>
+					<p class="product__price">$6.00</p>
 					<button class="btn btn--primary" data-action="ADD_TO_CART">Add To Cart</button>
 				</div>
 			</div>
 		</section>
 
-		<section class="section">
-			<h2 class="text-center">Cart</h2>
-			<div class="cart"></div>
+		<section class="section cart-section">
+			<h2 class="text-center">Your Cart</h2>
+			<div class="cart">
+				<!-- Cart items will be dynamically added here -->
+			</div>
+			<div class="cart-footer">
+				<p>Total: <span class="cart-total">$0.00</span></p>
+				<button class="btn btn--primary" data-action="CHECKOUT">Checkout</button>
+			</div>
 		</section>
 
 	</main>
